--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,5 +1,9 @@
 <div class="container">
     <div class="row">
+        <app-message-input></app-message-input>
+    </div>
+    <br>
+    <div class="row">
         <app-message-list></app-message-list>
     </div>
 </div>
