--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,9 +1,3 @@
 <div class="container">
-    <div class="row">
-        <app-message-input></app-message-input>
-    </div>
-    <br>
-    <div class="row">
-        <app-message-list></app-message-list>
-    </div>
+    <app-header></app-header>
 </div>
